syntax = "proto3";
option go_package = "./nameNode";

message NodeStorage {
    string NodeID     = 1;       
	uint64 LeaseUsedStorage = 2;  
	uint64 ActualUsedStorage = 3;
	uint64 TotalStorage      = 4;
}