syntax = "proto3";
option go_package = "./nameNode";

service NameNode {
  rpc UpdateJobQueue (UpdateJobQueueReq) returns (UpdateJobQueueRes) {}
}

message UpdateJobQueueReq{
    string jobQueueID = 1;
    enum Status {
        SUCCESS = 0;
        FAILED = 1;
    }
    Status status = 2;
}

message UpdateJobQueueRes{

}